cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_153.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/d1_msg.c:48: error: DEAD_STORE
  The value written to &ptr (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/d1_msg.c:48:6: Write of unused value
46.       memset(buf, 0, sizeof(buf));
47.       *ptr++ = s->s3.send_alert[0];
48.       *ptr++ = s->s3.send_alert[1];
           ^
49.   
50.       i = do_dtls1_write(s, SSL3_RT_ALERT, &buf[0], sizeof(buf), 0, &written);
